--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,4 +6,5 @@
   padding: 3rem;
   min-height: 100vh;
   background-color: var(--body-color);
+  overflow-x: hidden;
 }
